{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 37,
  "lineage": "70816bdc-b62c-839d-2c14-f3f61839227f",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "AZ_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:339712813986:subnet/subnet-0f194c28941f979ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "available_ip_address_count": 4090,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f194c28941f979ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712813986",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0cb4c469bab897f93"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "AZ_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:339712813986:subnet/subnet-065896d4ef3ff8752",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "available_ip_address_count": 4090,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065896d4ef3ff8752",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712813986",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0cb4c469bab897f93"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:339712813986:vpc/vpc-0cb4c469bab897f93",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-00ee256123c599cba",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0c3b99879131888fc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cb4c469bab897f93",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00b7ec5fdd005740a",
            "owner_id": "339712813986"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c1c30571d2dae5c9",
            "arn": "arn:aws:ec2:eu-west-1:339712813986:instance/i-0a0874b287c4a16ab",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a0874b287c4a16ab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08b89d5f862dd622a",
            "private_dns": "ip-172-31-26-120.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.26.120",
            "public_dns": "ec2-54-194-83-134.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.194.83.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0df8c9e7963d1622b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "primer-servidor-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f194c28941f979ae",
            "tags": {
              "Name": "mi-servidor-1"
            },
            "tags_all": {
              "Name": "mi-servidor-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0afd39df43ec13606"
            ]
          },
          "dependencies": [
            "aws_security_group.mi_grupo_seguridad",
            "aws_security_group.mi_grupo_seguridad_elb",
            "data.aws_subnet.AZ_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c1c30571d2dae5c9",
            "arn": "arn:aws:ec2:eu-west-1:339712813986:instance/i-0bbb6dc565e0f6397",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bbb6dc565e0f6397",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e22d9d696e44de48",
            "private_dns": "ip-172-31-35-161.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.35.161",
            "public_dns": "ec2-3-254-80-238.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.254.80.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a167db628c06773d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "primer-servidor-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-065896d4ef3ff8752",
            "tags": {
              "Name": "mi-servidor-2"
            },
            "tags_all": {
              "Name": "mi-servidor-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0afd39df43ec13606"
            ]
          },
          "dependencies": [
            "aws_security_group.mi_grupo_seguridad",
            "aws_security_group.mi_grupo_seguridad_elb",
            "data.aws_subnet.AZ_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ELB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:339712813986:loadbalancer/app/terraformers-alb/be795f8af853af7b",
            "arn_suffix": "app/terraformers-alb/be795f8af853af7b",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraformers-alb-305308254.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:339712813986:loadbalancer/app/terraformers-alb/be795f8af853af7b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraformers-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00165f707427339cc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-065896d4ef3ff8752"
              },
              {
                "subnet_id": "subnet-0f194c28941f979ae"
              }
            ],
            "subnets": [
              "subnet-065896d4ef3ff8752",
              "subnet-0f194c28941f979ae"
            ],
            "vpc_id": "vpc-0cb4c469bab897f93",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.mi_grupo_seguridad_elb",
            "data.aws_subnet.AZ_a",
            "data.aws_subnet.AZ_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:339712813986:listener/app/terraformers-alb/be795f8af853af7b/9af5effa291d8b5d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:339712813986:targetgroup/terraformers-alb-target-group/0b2b8544845cd8e1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:339712813986:listener/app/terraformers-alb/be795f8af853af7b/9af5effa291d8b5d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:339712813986:loadbalancer/app/terraformers-alb/be795f8af853af7b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ELB",
            "aws_lb_target_group.this",
            "aws_security_group.mi_grupo_seguridad_elb",
            "data.aws_subnet.AZ_a",
            "data.aws_subnet.AZ_b",
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:339712813986:targetgroup/terraformers-alb-target-group/0b2b8544845cd8e1",
            "arn_suffix": "targetgroup/terraformers-alb-target-group/0b2b8544845cd8e1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:339712813986:targetgroup/terraformers-alb-target-group/0b2b8544845cd8e1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "terraformers-alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cb4c469bab897f93"
          },
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachment_server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:339712813986:targetgroup/terraformers-alb-target-group/0b2b8544845cd8e1-20240406145519218200000001",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:339712813986:targetgroup/terraformers-alb-target-group/0b2b8544845cd8e1",
            "target_id": "i-0a0874b287c4a16ab"
          },
          "dependencies": [
            "aws_instance.server1",
            "aws_lb_target_group.this",
            "aws_security_group.mi_grupo_seguridad",
            "aws_security_group.mi_grupo_seguridad_elb",
            "data.aws_subnet.AZ_a",
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachment_server2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:339712813986:targetgroup/terraformers-alb-target-group/0b2b8544845cd8e1-20240406145519302200000002",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:339712813986:targetgroup/terraformers-alb-target-group/0b2b8544845cd8e1",
            "target_id": "i-0bbb6dc565e0f6397"
          },
          "dependencies": [
            "aws_instance.server2",
            "aws_lb_target_group.this",
            "aws_security_group.mi_grupo_seguridad",
            "aws_security_group.mi_grupo_seguridad_elb",
            "data.aws_subnet.AZ_b",
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mi_grupo_seguridad",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:339712813986:security-group/sg-0afd39df43ec13606",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0afd39df43ec13606",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Acceso desde el exterior desde el puerto 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00165f707427339cc"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "primer-servidor-sg",
            "name_prefix": "",
            "owner_id": "339712813986",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cb4c469bab897f93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mi_grupo_seguridad_elb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mi_grupo_seguridad_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:339712813986:security-group/sg-00165f707427339cc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Acceso desde el exterior desde el puerto 8080",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-00165f707427339cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Acceso desde el exterior desde el puerto 8080",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "primer-lb-sg",
            "name_prefix": "",
            "owner_id": "339712813986",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cb4c469bab897f93"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}